[Yuzhen]Complete Benchmark_Comparison

--- a/references.bib
+++ b/references.bib
@@ -40,6 +40,14 @@
     issn = {00010782}
 }
 
+@misc{QuantopianInc.2019AlphalensFactors,
+    title = {{Alphalens - Performance Analysis of Predictive (alpha) Stock Factors}},
+    year = {2019},
+    author = {{Quantopian Inc.}},
+    url = {http://quantopian.github.io/alphalens/},
+    address = {Boston}
+}
+
 @techreport{CapitalAdd-On,
     title = {{Capital IQ Premium Financials-Understanding the Data Debt Capital Structure Add-On}},
     url = {https://wrds-www.wharton.upenn.edu/documents/939/Understanding_The_Data_-_Capital_Structure_ELGoxJs.pdf}
@@ -184,6 +192,14 @@
     address = {New York}
 }
 
+@misc{QuantopianInc.2019PyfolioPython,
+    title = {{Pyfolio - Portfolio and Risk Analytics in Python}},
+    year = {2019},
+    author = {{Quantopian Inc.}},
+    url = {https://quantopian.github.io/pyfolio/},
+    address = {Boston}
+}
+
 @misc{Weerawarana2019ReIndexerUniverses,
     title = {{reIndexer - A Research Tool for Backtest-Driven Evaluation of Different Sectorization Universes}},
     year = {2019},
@@ -266,4 +282,12 @@
     url = {http://doi.wiley.com/10.1046/j.1475-679X.2003.00122.x},
     doi = {10.1046/j.1475-679X.2003.00122.x},
     issn = {0021-8456}
+}
+
+@misc{QuantopianInc.2019ZiplineLibrary,
+    title = {{Zipline - Pythonic Algorithmic Trading Library}},
+    year = {2019},
+    author = {{Quantopian Inc.}},
+    url = {http://www.zipline.io/},
+    address = {Boston}
 }
