--- a/sections/optimal_sector_universes.tex
+++ b/sections/optimal_sector_universes.tex
@@ -4,7 +4,7 @@
     
 \chapter{Optimal Sector Universes}
 
-In this chapter we show the backtesting results of our Learned Sectors. We also list optimal sector universes under different criteria and their visualizations. Then we analyze some characteristics of optimal sector universes and explain why we choose optimal sector universes of maximum Sharpe Ratio to be comparison with benchmark. 
+In this chapter we show the backtesting results of our Learned Sectors. We also list optimal sector universes under different criteria and their visualizations. Then we analyze some characteristics of optimal sector universes and explain why we choose optimal sector universe of maximum Sharpe Ratio to be comparison with benchmark. 
 
 \section{Backtesting Results}
 
@@ -54,7 +54,7 @@ Here are the visualizations of optimal sector universes with different criteria:
 From the graph of Single Linage and  5 Sectors, we can find that most companies are clustering in one huge sector, and other sectors only contain one individual company. That is the reason why this sector universe has lowest turnovers: since some sectors only contain one company, they do not generate ETF restructuring turnover and low portfolio rebalancing turnover. 
 
 \section{Optimal Universe for Sharpe Ratio}
-
+% may add more explanation
 Since our goal is to evaluate risk-adjusted return of our Learned Sector, we focus on the optimal universe with maximum Sharpe Ratio. Companies from Heaith Care, Information Technology, Consumer Staples and Comsumer Discretionary are separated into different new sectors. Most companies from Financials, Energy and Industrials are classified into same sectors in new sector classification. Also, the phenomenon of one or two "big" sevctors and several "small" sectors coexist exists. 
 
 \end{document}
