[Yuzhen]Update max sharpe ratio image

--- a/sections/candidate_universe_ranking.tex
+++ b/sections/candidate_universe_ranking.tex
@@ -107,7 +107,8 @@ Following this, reIndexer computes the correlation matrix of returns using the h
 \begin{gather*}
     \text{Let $\Omega$} = \text{Set of sectors in the candidate universe, $\Omega_i \in \{\Omega_1, \Omega_2, \ldots, \Omega_n\}$} \\
     \text{Let $\boldsymbol{\Pi}_{\Omega_i}$} = \text{Historical log price vector of sector SETF $\Omega_i$} \\
-    \text{Let $\Sigma$} = \text{Correlation matrix of historical log-returns of SETFs } \\
+    \text{Let $\boldsymbol{\Sigma}$} = \text{Covariance matrix of historical log-returns of SETFs } \\
+    \text{Let $\boldsymbol{\omega}$} = \text{Vector of SETF weights in the Global Minimum Variance Portfolio} \\
     \\
     \boldsymbol{\Sigma} =
     \begin{bmatrix}
@@ -120,6 +121,13 @@ Following this, reIndexer computes the correlation matrix of returns using the h
         \mathbb{E}[(\boldsymbol{\Pi}_{\Omega_n} - \mathbb{E}[\boldsymbol{\Pi}_{\Omega_n}])(\boldsymbol{\Pi}_{\Omega_1} - \mathbb{E}[\boldsymbol{\Pi}_{\Omega_1}])] & \mathbb{E}[(\boldsymbol{\Pi}_{\Omega_n} - \mathbb{E}[\boldsymbol{\Pi}_{\Omega_n}])(\boldsymbol{\Pi}_{\Omega_2} - \mathbb{E}[\boldsymbol{\Pi}_{\Omega_2}])] & \cdots & \mathbb{E}[(\boldsymbol{\Pi}_{\Omega_n} - \mathbb{E}[\boldsymbol{\Pi}_{\Omega_n}])^2] \\
     \end{bmatrix}
 \end{gather*}
+
+\begin{equation*}
+    \therefore \, \text{Global minimum variance portfolio weights are determined by solving the non-convex optimization:}
+    \begin{aligned}
+        & \underset{\boldsymbol{\omega}}{\text{minimize}} & & \boldsymbol{\omega}^\intercal \boldsymbol{\Sigma}
+    \end{aligned}
+\end{equation*}
 
 
 \subsection{Software Architecture Overview}
