[rukmal] finished reindexer description

--- a/references.bib
+++ b/references.bib
@@ -200,6 +200,19 @@
     address = {Boston}
 }
 
+@article{Oliphant2007PythonComputing,
+    title = {{Python for Scientific Computing}},
+    year = {2007},
+    journal = {Computing in Science {\&} Engineering},
+    author = {Oliphant, Travis E.},
+    number = {3},
+    pages = {10--20},
+    volume = {9},
+    url = {http://ieeexplore.ieee.org/document/4160250/},
+    doi = {10.1109/MCSE.2007.58},
+    issn = {1521-9615}
+}
+
 @misc{Weerawarana2019ReIndexerUniverses,
     title = {{reIndexer - A Research Tool for Backtest-Driven Evaluation of Different Sectorization Universes}},
     year = {2019},
