--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -30,7 +30,7 @@ In the United States today, there are myriad sectorization taxonomies (hereafter
     \centering
     \vspace{\wrapfigadjustment}
     \fbox{
-    \includegraphics[width=0.28\textwidth]{images/msci_gics_breakdown.png}
+    \includegraphics[width=\linewidth]{images/msci_gics_breakdown.png}
     }
     \caption{Overview of the GICS Sector Universe}
     \label{fig:introduction:gics_breakdown}
@@ -52,22 +52,23 @@ Additionally, the GICS methodology specification indicates that sector assignmen
 
 \subsection{ICB - Industry Classification Benchmark}
 
-\begin{wrapfigure}[11]{R}{0.3\textwidth}
-    \centering
-    \vspace{\wrapfigadjustment}
-    \fbox{
-    \includegraphics[width=0.28\textwidth]{images/ftse_icb_breakdown.png}
-    }
-    \caption{Overview of the MSCI Sector Universe}
-    \label{fig:introduction:icb_breakdown}
-\end{wrapfigure}
-
 The ICB (Industry Classification Benchmark)\citeFormat{\cite{FTSEInternationalLimited2019IndustryRussell}} is published by FTSE International (previously jointly owned by Dow Jones and FTSE). Similarly to the GICS, the ICB also classifies corporations into four increasingly specific categories; \textit{industry} (the most general), \textit{supersector}, \textit{sector}, and finally \textit{subsector}, the most specific. A visualization of the ICB taxonomy is reproduced in Figure~\ref{fig:introduction:icb_breakdown}\citeFormat{\cite{FTSEInternationalLimited2019IndustryRussell}}.
+
 
 Similar to the GICS, ICB too utilizes three main criteria when classifying companies into specific sectors, and other cateogries. They are; the primary source of revenue, description in annual filings, and - in the case of a new company - information derived from the company prospectus, or regulatory filing descriptions (company-supplied).
 
 
 \section{Key Limitations}
+
+\begin{wrapfigure}[11]{R}{0.3\textwidth}
+    \centering
+    \vspace{\wrapfigadjustment}
+    \fbox{
+    \includegraphics[width=\linewidth]{images/ftse_icb_breakdown.png}
+    }
+    \caption{Overview of the MSCI Sector Universe}
+    \label{fig:introduction:icb_breakdown}
+\end{wrapfigure}
 
 In this section, we analyze the GICS and ICB sector classification schemes described above through the lens of their limitations. We then utilize these key limitations to inform our research goals.
 
