[Yuzhen]Change image in Benchmark_Comparison with complete, 17 sectors

--- a/sections/benchmark_comparison.tex
+++ b/sections/benchmark_comparison.tex
@@ -12,28 +12,28 @@ Our benchmark sector universe is GICS S\&P 500 sectors universe. We do the backt
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.4]{images/etf_restrut_turnover_compare.png}
+    \includegraphics[scale=0.4]{images/etf_restrut_compare.png}
     \caption{Cumulative ETF Restructuring Turnover Comparison}
     \label{fig:benchmark_comparison:restrut_turnover_comparison}
 \end{figure} 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.4]{images/port_rebal_turnover_compare.png}
+    \includegraphics[scale=0.4]{images/port_rebal_compare.png}
     \caption{Cumulative Portfolio Rebalancing Turnover Comparison}
     \label{fig:benchmark_comparison:rebal_turnover_comparison}
 \end{figure}
 
 \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.4]{images/port_value_compare.png}
+    \includegraphics[scale=0.4]{images/value_compare.png}
     \caption{Portfolio Return Comparison}
     \label{fig:benchmark_comparison:retuern_comparison}
 \end{figure}
 
  \begin{figure}[H]
     \centering
-    \includegraphics[scale=0.4]{images/sharpe_ratio_compare.png}
+    \includegraphics[scale=0.4]{images/sharpe_compare.png}
     \caption{Portfolio Sharpe Ratio Comparison}
     \label{fig:benchmark_comparison:sharpe_comparison}
 \end{figure}
